PharmaDemo/src/objects/SFDC_Strategy2Oppty__c.object
<CustomObject>
    <description>Connector object that ties an Account Strategy to an Opportunity.</description>
    <fields>
        <fullName>Amount__c</fullName>
        <formula>Opportunity_Name__r.Amount</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Assessment_Grid_Rating__c</fullName>
        <label>Assessment Grid Rating</label>
        <picklist>
            <picklistValues>
                <fullName>On Formulary - Easy Access</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Formulary - Difficult Access</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Off Formulary - Easy Access</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Off Formulary - Difficult Access</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Business_Plan__c</fullName>
        <label>Business Plan</label>
        <referenceTo>SFDC_Acct_Plan__c</referenceTo>
        <relationshipName>Strategy2Oppty</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>CloseDate__c</fullName>
        <formula>Opportunity_Name__r.CloseDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opportunity_Name__c</fullName>
        <label>Opportunity Name</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Strategy2Oppty</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>StageName__c</fullName>
        <formula>TEXT(Opportunity_Name__r.StageName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>View__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; &amp; Id, IMAGE(&quot;/img/icon/tasks16.gif&quot;, &quot;View&quot;) ,&quot;_parent&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>View</label>
        <type>Text</type>
    </fields>
    <label>Related Opportunities</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>BusinessPlan2OpportunityID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Related Opportunities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>